--- a/templates/user.html
+++ b/templates/user.html
@@ -47,7 +47,7 @@
     <div class="container">
       <div class="logo-container">
         <img
-          src="assets/tiktok-logo.png"
+          src="/static/assets/tiktok-logo.png"
           alt="TikTok Logo"
           class="logo-img"
           id="logoImage"
